Move pictures under poi route

--- a/app/templates/poi/show/files/edit.hbs
+++ b/app/templates/poi/show/files/edit.hbs
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="au-o-grid__item au-u-2-3@small">
-      <LinkTo @route='experience.show.tree' class="au-c-link au-c-link--secondary" @model={{this.experience}}>
+      <LinkTo @route='poi.show.tree' class="au-c-link au-c-link--secondary" @model={{this.poi}}>
         <AuIcon @icon="arrow-left" @alignment="left" />
         Terug
       </LinkTo>
