Don't require button type for AuButton
The type of the button should be supplied in ...attributes to match
the standard.  This is a special case.

--- a/app/components/au-button.hbs
+++ b/app/components/au-button.hbs
@@ -1,3 +1,4 @@
-<button class="au-c-button {{this.width}} {{this.size}} {{this.skin}} {{this.alert}} {{this.loading}} {{this.disabled}}" disabled={{this.disabled}} type="button" ...attributes>
+{{!-- template-lint-disable require-button-type --}}
+<button class="au-c-button {{this.width}} {{this.size}} {{this.skin}} {{this.alert}} {{this.loading}} {{this.disabled}}" disabled={{this.disabled}} ...attributes>
   {{yield}}
 </button>
