Update to new routes and remove dead ones
We're updating the use to the new routes and we are removing the old
routes.  The routes we were using were based on the need to talk about
an experience.  That is not the case anymore.  The routes can now be
more logical, meaning we can convert to a bore sensical naming.

--- a/app/components/tree-components/experience.hbs
+++ b/app/components/tree-components/experience.hbs
@@ -6,7 +6,7 @@
     @disableHandlerComponent={{true}}
     class="au-c-tree__item au-c-tree__item--child">
 
-    <LinkTo class="au-c-tree__edit" @route="experience.show.tree.edit" @models={{array experience.id @node.id}}>
+    <LinkTo class="au-c-tree__edit" @route="poi.show.tree.edit" @models={{array @node.id experience.id}}>
       <AuIcon @icon="pencil" />
       <span class="au-c-tree__edit-label">Aanpassen</span>
     </LinkTo>
