--- a/app/templates/experience/edit.hbs
+++ b/app/templates/experience/edit.hbs
@@ -12,7 +12,7 @@
           <LinkTo class="au-c-link au-c-link--secondary au-u-limit-breadcrumb" @route="poi.show.experiences.index" @model={{@model.pointOfInterest.id}}>{{@model.pointOfInterest.label}}</LinkTo>
         </li>
         <li class="au-c-list-horizontal__item">
-          <LinkTo class="au-c-link au-c-link--secondary au-u-limit-breadcrumb" @route="experience.show.tree" @model={{@model.id}}>{{@model.title}}</LinkTo>
+          <LinkTo class="au-c-link au-c-link--secondary au-u-limit-breadcrumb" @route="experience.edit" @model={{@model.id}}>{{@model.title}}</LinkTo>
         </li>
         <li class="au-c-list-horizontal__item">
           <strong>
