--- a/app/templates/poi/show/tree/edit.hbs
+++ b/app/templates/poi/show/tree/edit.hbs
@@ -6,7 +6,7 @@
     <p class="au-c-info-text"><strong>Tree node:</strong> {{@model.treeNode.uri}}</p>
     <p class="au-c-info-text"><strong>Edit type:</strong> {{this.extendedEditInfo.component}}</p>
 
-    <LinkTo @route="experience.show.tree" @model={{@model.subject}} class="au-c-close au-c-close--large">
+    <LinkTo @route="poi.show.tree" @model={{@model.poi}} class="au-c-close au-c-close--large">
       <AuIcon @icon="cross" @size="large" />
       <span class="au-u-hidden-visually">Sluiten</span>
     </LinkTo>
