--- a/app/templates/poi/index.hbs
+++ b/app/templates/poi/index.hbs
@@ -16,7 +16,7 @@
         <li class="au-o-grid__item">
           <article class="au-o-box au-o-box--small au-c-card au-c-card--link">
             <AuHeading @level="2" @skin="4">
-              <LinkTo @route="poi.show" @model={{poi}} class="au-c-link au-c-link--secondary au-c-card__link">
+              <LinkTo @route="poi.show" @model={{poi.id}} class="au-c-link au-c-link--secondary au-c-card__link">
                 {{poi.label}}
               </LinkTo>
             </AuHeading>
