Remove edit-components/ prefix from custom-component-mapping
The custom component mapping has a prefix to identify the edit component
which should be rendered.  It is the intention to split off the logical
component from its rendering.  The prefix given here therefore doesn't
help overly much.

This will also make the widget more obvious as the edit-component name
can be removed there too.

--- a/app/templates/poi/show/tree/edit.hbs
+++ b/app/templates/poi/show/tree/edit.hbs
@@ -15,13 +15,13 @@
 
   <div class="au-o-box au-c-sidebar__content">
     {{#if this.extendedEditInfo}}
-      {{#component this.extendedEditInfo.component
+      {{#component (concat "edit-components/" this.extendedEditInfo.component)
            key=this.extendedEditInfo.key
            conceptScheme=this.extendedEditInfo.conceptScheme
            treeNode=@model.treeNode
            subject=@model.subject
-           as |events|}}
-        <span {{did-update events.reset @model.treeNode}}></span>
+           as |actions|}}
+        <span {{did-update actions.reset @model.treeNode}}></span>
       {{/component}}
     {{/if}}
 
