--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -1,11 +1,12 @@
 <AuToolbar @border="bottom" @size="medium">
   <AuToolbarGroup>
     <AuHeading @level="2" @skin="5" class="au-u-limit-text">
-      {{this.model.title}}
+      {{!-- {{this.model.title}} --}}
+      Kennisboom
     </AuHeading>
   </AuToolbarGroup>
 </AuToolbar>
-<div class="au-c-body-container au-c-body-container--scroll au-c-theme-gray-100">
+<div class="au-c-body-container au-c-theme-gray-100">
   <div class="au-o-grid au-o-grid--flush au-o-grid--fixed">
     <div class="au-o-grid__item au-u-3-5 au-u-2-3@medium">
       <ul class="au-c-tree">
