--- a/app/components/tree/node.hbs
+++ b/app/components/tree/node.hbs
@@ -29,7 +29,7 @@
           </AuHeading>
         {{/if}}
 
-        <p class="au-c-tree__uri">{{@node.uri}}</p>
+        {{!-- <p class="au-c-tree__uri">{{@node.uri}}</p> --}}
       </div>
 
       <chart.if @state="error">
