--- a/app/styles/ember-appuniversum/_c-main-container.scss
+++ b/app/styles/ember-appuniversum/_c-main-container.scss
@@ -13,31 +13,36 @@ $au-main-container-height: calc(100vh - 4.2rem) !default;
 .au-c-main-container {
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 
-  // @include mq(medium) {
+  @include mq(medium) {
     height: $au-main-container-height;
-  // }
+  }
 }
 
 .au-c-main-container__sidebar {
   flex-basis: 100%;
 
-  // @include mq(medium) {
+  @include mq(medium) {
     height: 100%;
     flex-basis: 25rem;
     flex-grow: 1;
-  // }
+  }
 }
 
 .au-c-main-container__content {
   flex-basis: 100%;
   max-width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 
-  // @include mq(medium) {
+  @include mq(medium) {
     height: 100%;
     flex-basis: 0;
     flex-grow: 999;
-  // }
+    overflow: hidden;
+  }
 }
 
 .au-c-main-container__content--scroll {
