--- a/app/components/tree/node.hbs
+++ b/app/components/tree/node.hbs
@@ -8,13 +8,19 @@
           <chart.if @state="open">
             <button class="au-c-tree__button" type="button" {{on "click" (fn chart.preventAndSend "TOGGLE_OPEN")}} aria-expanded="true">
               <AuIcon @icon="nav-down" />
-              {{this.nodeTitle}}
+              <span class="au-c-tree__button-text">
+                {{this.nodeTitle}}
+              </span>
+              <span class="au-c-tree__button-label">Toon minder</span>
             </button>
           </chart.if>
           <chart.if @state="collapsed">
             <button class="au-c-tree__button" type="button" {{on "click" (fn chart.preventAndSend "TOGGLE_OPEN")}}  aria-expanded="false">
               <AuIcon @icon="nav-right" />
-              {{this.nodeTitle}}
+              <span class="au-c-tree__button-text">
+                {{this.nodeTitle}}
+              </span>
+              <span class="au-c-tree__button-label">Toon meer</span>
             </button>
           </chart.if>
           <chart.if @state="loading">
