--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -21,6 +21,9 @@
       <AuHeading @skin="2"><AuPill>Locatie</AuPill> <span  class="au-u-limit-text">{{@model.label}}</span></AuHeading>
     </AuToolbarGroup>
     <AuToolbarGroup class="au-u-h6">
+      <div class="au-c-button au-c-button--secondary">
+        O({{this.smartStore.outstandingUpdates.length}}) X({{this.smartStore.executingUpdates.length}}) F({{this.smartStore.failedUpdates.length}})
+      </div>
       <LinkTo class="au-c-button au-c-button--secondary" @route="poi.show.experiences.index" @model={{@model}}>
         Belevingen
       </LinkTo>
