Use SmartStore for comment fields
The comment fields are now also auto-updating.  Any change is pushed to
the SmartStore, which will save the contents as needed.

--- a/app/templates/poi/show/tree/edit.hbs
+++ b/app/templates/poi/show/tree/edit.hbs
@@ -33,7 +33,7 @@
 
     <hr class="au-c-hr">
 
-    <form {{on "submit" this.submit}} class="au-c-form">
+    <form class="au-c-form">
       {{#if @model.treeNode.children}}
         <p>
           <AuLabel for="score">Score</AuLabel>
@@ -53,7 +53,6 @@
           <AuInput @width="block" id="commentUrl" @value={{this.currentCommentLinkUrl}} @placeholder="" />
         </p>
       {{/if}}
-      <AuButton type="submit" {{on "click" this.submit}}>Instellen</AuButton>
     </form>
 
     {{!--
