Only show spinning icon when actually saving to backend
This feature only shows the fact that we're sending updates to the
backend when we're effectively doing so.  This could at least promote
the idea that the fast backend is not slow, even though it still implies
the same because the text says that we're saving.  It's possibly the
closest we'll get without showing the available guts of the backend.

--- a/app/components/smart-store/state.hbs
+++ b/app/components/smart-store/state.hbs
@@ -1,11 +1,18 @@
-{{#if this.smartStore.outstandingUpdates.length}}
-<span class="au-c-state__label au-c-state__label--save">
-  <AuIcon @icon="renew" @alignment="left" @size="large" @ariaHidden={{true}} />
-  Opslaan
-</span>
+{{#if this.isWaiting}}
+  <span class="au-c-state__label au-c-state__label--save">
+    <AuIcon style="animation-name: none" @icon="renew" @alignment="left" @size="large" @ariaHidden={{true}} />
+    Opslaan
+  </span>
 {{/if}}
 
-{{#if this.smartStore.executingUpdates.length}}
+{{#if this.isSaving}}
+  <span class="au-c-state__label au-c-state__label--save">
+    <AuIcon @icon="renew" @alignment="left" @size="large" @ariaHidden={{true}} />
+    Opslaan
+  </span>
+{{/if}}
+
+{{#if this.hasSaved}}
 <span class="au-c-state__label au-c-state__label--saved">
   <AuIcon @icon="check" @alignment="left" @size="large" @ariaHidden={{true}} />
   Opgeslagen
