remove pre-launch page

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -10,11 +10,6 @@
             </AuLink>
           </li>
           <li class="au-c-list-horizontal__item">
-            <AuLink @linkRoute="pre-launch" @skin="secondary">
-              Handleiding testfase
-            </AuLink>
-          </li>
-          <li class="au-c-list-horizontal__item">
             <strong>Over Toegankelijk Vlaanderen</strong>
           </li>
         </ul>
@@ -107,15 +102,15 @@
 
           <div class="au-o-grid__item au-u-1-2@small">
             <AuCard class="au-u-text-center">
-              <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
+              <AuBadge @icon="users" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="2" @skin="4">
-                  Handleiding testfase
+                  Voor ontwikkelaars
                 </AuHeading>
-                <p class="au-u-margin-top-tiny">Deel je mening over onze nieuwe online toepassing van 3 december tot 24 december 2020.</p>
+                <p class="au-u-margin-top-tiny">Hier vind je meer informatie over hoe je de widget kan integreren in je website.</p>
                 <p>
-                  <LinkTo @route="pre-launch" class="au-c-button au-c-button--secondary">
-                    Bekijk de handleiding
+                  <LinkTo @route="developers.intro" class="au-c-button au-c-button--secondary">
+                    Handleiding
                   </LinkTo>
                 </p>
               </AuContent>
