--- a/app/templates/poi/show/tree.hbs
+++ b/app/templates/poi/show/tree.hbs
@@ -15,8 +15,7 @@
         {{/each}}
         <div class="au-c-upload-box">
           <AuHeading @level="2" @skin="5" class="au-u-margin-bottom-small">Foto's</AuHeading>
-          <UploadImage @poi={{this.poi}} />
-          <ListImages @poi={{this.poi}} @height={{100}}/>
+          <PoiPictureManipulator @poi={{this.poi}} />
         </div>
       </ul>
     </div>
