--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -75,6 +75,7 @@
 @import "ember-appuniversum/c-sidebar";
 @import "ember-appuniversum/c-textarea";
 @import "ember-appuniversum/c-toolbar";
+@import "ember-appuniversum/c-data-table";
 
 
 // PROJECT COMPONENTS
