--- a/app/styles/ember-appuniversum/_c-textarea.scss
+++ b/app/styles/ember-appuniversum/_c-textarea.scss
@@ -34,6 +34,7 @@ $au-textarea-font-size             : $au-h6 !default;
 
 .au-c-textarea--block {
   display: block;
+  min-height: 8.4rem;
   width: 100%;
 }
 
