fix image table

--- a/app/components/poi-picture-manipulator.hbs
+++ b/app/components/poi-picture-manipulator.hbs
@@ -24,7 +24,6 @@
           @dragHandle=".is-draggable"
           @content={{image}}
           @isSortable={{true}}>
-
           <td>
             <button type="button" class="au-c-button is-draggable">
               <AuIcon @icon="nav-up-down" />
@@ -39,8 +38,7 @@
               <span class="au-u-hidden-visually">Plaats naar beneden</span>
             </button>
           </td>
-
-          <td class="au-u-padding-none is-draggable">
+          <td class="au-u-padding-none">
             <div class="au-c-upload-image">
               <img src="/images/{{image.id}}?height=160" alt="{{image.label}}" />
             </div>
@@ -52,8 +50,6 @@
             <AuTextarea {{on "input" (fn this.updateImage image "label")}} value={{image.label}} @width="block" />
           </td>
           <td>
-
-
             <button type="button" {{on "click" (fn this.removeImage image)}} class="au-c-button au-c-button--tertiary au-c-button--alert">
               <AuIcon @icon="bin" @alignment="left" />
               Verwijder foto
