--- a/app/components/upload-image.hbs
+++ b/app/components/upload-image.hbs
@@ -1,1 +1,3 @@
 <VoMuFileDropzone @onFinishUpload={{this.uploaded}} @maxFileSizeMB="1024" />
+
+<AuFileUpload @onFinishUpload={{this.uploaded}} @maxFileSizeMB="1024" />
