Add uploaded images at the end of the list
Uploaded images are now stored at the end of the list.

--- a/app/components/poi-picture-manipulator.hbs
+++ b/app/components/poi-picture-manipulator.hbs
@@ -1,4 +1,4 @@
-<UploadImage @poi={{@poi}} />
+<VoMuFileDropzone @onFinishUpload={{this.uploadedFile}} @maxFileSizeMB="1024" />
 
 <table>
   <thead>
