style file upload, fix accessibility

--- a/app/components/poi-picture-manipulator.hbs
+++ b/app/components/poi-picture-manipulator.hbs
@@ -62,5 +62,5 @@
 </div>
 
 <div class="au-o-box au-o-box--small">
-  <VoMuFileDropzone @onFinishUpload={{this.uploadedFile}} @maxFileSizeMB="1024" />
+  <AuFileUpload @onFinishUpload={{this.uploadedFile}} @maxFileSizeMB="1024" />
 </div>
